welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
droite()
droite()
while (estSurBiscuit()!= true ){
	avance();
}
PrendBiscuit()
gauche()
gauche()
while (estSurBiscuit()!= true ){
	avance();
}
recule()
poseBiscuit()
